--- a/config.ini
+++ b/config.ini
@@ -1,4 +1,4 @@
-name=config in first file-develop branch changes
+name=config in first file-develop branch changes-branch2
 id=1
-chnaged from develop branch
+chnaged from develop2 branch
 
