--- a/config.ini
+++ b/config.ini
@@ -1,4 +1,4 @@
-name=config in first file-develop branch changes-branch2
+name=My-brnach
 id=1
-chnaged from develop2 branch
-
+name=hello
+location=texas
