--- a/config.ini
+++ b/config.ini
@@ -1,4 +1,5 @@
-name=config in first file-develop branch changes-branch2
+name=his-branch
 id=1
-chnaged from develop2 branch
+name=his-branch
+loaction=India
 
